Drafted a first dumb implementation
It supposes that your PHP project follows the PSR-0 (using namespaces
and not _ type naming) and that your code is located in a src
directory.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
+        "prooph/service-bus": "^6.1",
         "symfony/console": "^4.0"
     },
     "require-dev": {
