--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require": {
         "prooph/service-bus": "^6.1",
-        "symfony/console": "^4.0"
+        "symfony/console": "^4.0",
+        "symfony/finder": "^4.0"
     },
     "require-dev": {
         "beberlei/assert": "^2.8",
