--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "prooph/service-bus": "^6.1",
         "symfony/console": "^4.0",
-        "symfony/finder": "^4.0"
+        "symfony/finder": "^4.0",
+        "symfony/stopwatch": "^4.0"
     },
     "require-dev": {
         "beberlei/assert": "^2.8",
