--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer-plugin-api": "^1.1",
         "nikic/php-parser": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/dependency-injection": "^4.0",
         "symfony/finder": "^4.0"
     },
     "require-dev": {
