--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "require": {
         "composer-plugin-api": "^1.1",
         "nikic/php-parser": "^4.0",
-        "symfony/console": "^4.0",
-        "symfony/dependency-injection": "^4.0",
-        "symfony/finder": "^4.0"
+        "symfony/console": "^3.0 | ^4.0",
+        "symfony/dependency-injection": "^3.0 | ^4.0",
+        "symfony/finder": "^3.0 | ^4.0"
     },
     "require-dev": {
         "composer/composer": "^1.6",
